feat(observability): Phase 4 簇① 观测地基——OTLP 导出 Langfuse Cloud + 内容桥接 + 告警规则
4.1 LLM 观测链路（E2E 通过）：
- kb-api 观测依赖四件套：spring-boot-micrometer-tracing-opentelemetry +
  micrometer-tracing-bridge-otel + opentelemetry-exporter-otlp + context-propagation
- Boot 4.1 属性形态实证接线 management.opentelemetry.tracing.export.otlp.*
  （endpoint 信号专属须全路径 /v1/traces，缺则 404 直连实测）+ Basic Auth
- management.tracing.export.otlp.enabled 总开关默认关：未配凭据零导出零噪音
- 内容桥接定稿 ContentCapturingChatModelObservationConvention：Spring AI 2.0 GA
  log-prompt 只打日志不进 span 实证缺口 + 打标 handler onStop 竞态实证否掉 →
  convention 高基数 KeyValue 落 gen_ai.prompt/completion（Langfuse 映射契约键），
  SmartRoutingConfig 主/备手工模型 ObjectProvider 条件接线；E2E 实证 GENERATION
  span 完整 prompt（系统提示+RAG 资料）/completion/token 可见
- 内容捕获开关 RAG_OBSERVABILITY_LOG_CONTENT 单源落 application-ai.yml
  （spring.config.import 导入源优先级高于 application.yml 实证坑）
- Reactor 自动上下文传播 + ContextRegistry 显式 loadThreadLocalAccessors()
- 已知限制留档：AI 子树完整但不挂 HTTP 根 trace（碎片化，簇②/⑥ 专项）

4.2 Prometheus 告警规则：
- infra/prometheus/alert-rules-kb-rag.yml 11 条（JVM/进程 4 + LLM 特有 7）
- 指标名按 actuator/prometheus 实证校准（.total 结尾 counter 不重复追加 _total）
- 阈值取调研参考值待基线校准；ECS 无 Prometheus，语法自检通过，
  真实触发自检随簇⑥ Compose 部署

支撑改动：
- AiBusinessMetrics +5 计数（rag.request.total/rejected/error 审计三态同语义 +
  rag.rerank.total/fallback），AuditTraceAdvisor/RerankDocumentPostProcessor 挂点
- README.md 全面重写（Phase 1 停滞态 → 当前全貌，用户指令一并提交）
- 设计回写 13 章 v2.30（配置形态/Langfuse Cloud/告警落档/内容桥接实证/碎片化留档）
- CLAUDE.md 坑位 ⑳-㉖（Boot 4.1 OTLP 迁移/counter 命名/enable-preview 延展/
  Langfuse 契约/import 源优先级/log-prompt 语义/ContextRegistry 装载）

测试：kb-ai-core 146+ / kb-api 71 全绿（含新增 convention 3 + 接线回归 1 +
指标 2 + rerank 2 + 审计计数 1）

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>